--- a/App/res/values/color.xml
+++ b/App/res/values/color.xml
@@ -8,6 +8,7 @@
 	 <color name="darkgray">#808080</color>
 	 <color name="purple">#800080</color>
 	 <color name="aqua">#00FFFF</color>
+	 <color name="bluey">#4ab5b5</color>
 	 <color name="teal">#008080</color>
 	 <color name="green">#008000</color>
 	 <color name="blue">#0431B4</color>
