--- a/App/res/layout/activity_main.xml
+++ b/App/res/layout/activity_main.xml
@@ -2,65 +2,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
+        <TextView
+        android:id="@+id/textView1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:background="@color/white"/>
+    
     <TextView
         android:id="@+id/howToPlayTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
-        android:textSize="35sp"
-        android:text="@string/howToPlay" />            
-            
-            <ImageView
-                android:id="@+id/instr1image"
-                android:layout_width="150dp"
-                android:layout_height="80dp"
-                android:layout_marginTop="10dp"
-                android:layout_below="@+id/howToPlayTitle"
-                android:layout_centerInParent="true"
-                android:src="@drawable/instructions1" />
-            
-            
-            <TextView
-                android:id="@+id/instruction1"
-                android:layout_width="330dp"
-                android:textSize="25sp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_below="@+id/instr1image"
-                android:text="@string/instr1"/>
-            
-                        
-           <ImageView
-                android:id="@+id/instr2image"
-                android:layout_width="150dp"
-                android:layout_height="80dp"
-                android:layout_centerInParent="true"
-                android:layout_below="@+id/instruction1"
-                android:src="@drawable/instruction2" />
+        android:textSize="45sp"
+        android:textColor="@color/red"
+        android:textStyle="bold"
+        android:text="@string/howToPlay" />
 
-            <TextView
-		        android:id="@+id/instruction2"
-		        android:textSize="25sp"
-		        android:layout_width="330dp"
-		        android:layout_height="wrap_content"
-		        android:layout_below="@+id/instr2image"
-		        android:text="@string/instr2"/>
-            
-      <TextView 
-    	    android:id="@+id/blackSeperation"
-			android:layout_below="@+id/instruction2"
-			android:layout_marginTop="40dp"
-			android:layout_alignParentLeft="true"
-    	    android:layout_height="2dp"
-    	    android:layout_width="fill_parent"
-    	    android:background="@color/black"/>
 
     <Button
         android:id="@+id/facebookLoginButton"
@@ -76,6 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom = "50dp"
         android:layout_centerHorizontal="true"
         android:text="@string/playWithout" />
 
@@ -96,5 +62,16 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="35dp"
         android:text="@string/startGame" />
+
+    <WebView
+        android:id="@+id/gifView1"
+        android:layout_width="fill_parent"
+        android:layout_height="150dp"
+        android:layout_above="@+id/facebookSync"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="75dp"
+        android:layout_marginLeft="55dp" />
+
+
 
 </RelativeLayout>
