--- a/App/res/values/color.xml
+++ b/App/res/values/color.xml
@@ -2,7 +2,7 @@
 <resources>
 	 <color name="white">#FFFFFF</color>
 	 <color name="yellow">#FFFF00</color>
-	 <color name="red">#FF0000</color>
+	 <color name="red">#ef5b4f</color>
 	 <color name="silver">#C0C0C0</color>
 	 <color name="gray">#C0C0C0</color>
 	 <color name="darkgray">#808080</color>
