60 seconds & loading formatting

--- a/App/res/layout/loading.xml
+++ b/App/res/layout/loading.xml
@@ -17,6 +17,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/progressBar"
+            android:textSize = "20sp"
+            android:textColor = "@color/bluey"
             android:layout_centerHorizontal="true"
             android:text="@string/loadingFacebook" />
 
